# Conversor-de-Fibras-Purkinje

./: Readme.md
HeartConverter/Codigo/: CMakeLists.txt  VtkParser.cpp  VtkParser.h  main.cpp
HeartConverter/Codigo/Datasets/: Dataset.h  DatasetAbstract.cpp  DatasetAbstract.h
HeartConverter/Codigo/Outputs/: AbstractFile.h  CarpElements.cpp  CarpElements.h  CarpPoints.cpp  CarpPoints.h  CarpPurkinje.cpp  CarpPurkinje.h
HeartConverter/Codigo/nbproject/: configurations.xml  project.xml
HeartConverter/Codigo/nbproject/private/: Default.properties  configurations.xml  private.xml
HeartConverter/Programa/: config.cfg
HeartConverter/Programa/Tests/Corazon/Modelo Completo/: 1corazon.elem  1corazon.pts  1corazon.vtk
HeartConverter/Programa/Tests/Corazon/Modelo Endocardio/: 1endocardio.elem  1endocardio.pts  1endocardio.vtk
HeartConverter/Programa/Tests/Purkinje/1/: arbol1.pkje  arbol1.vtk
HeartConverter/Programa/Tests/Purkinje/2/: arbol2.pkje  arbol2.vtk
HeartConverter/Programa/Tests/Purkinje/3/: arbol3.pkje  arbol3.vtk
